--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
+    "leaflet": "^1.9.4",
+    "leaflet-gpx": "^1.7.0",
+    "leaflet.fullscreen": "^3.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
@@ -24,6 +28,9 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
+    "@types/leaflet": "^1.9.8",
+    "@types/leaflet-fullscreen": "^1.0.9",
+    "@types/leaflet.fullscreen": "^3.0.2",
     "@types/node": "^20.11.28",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-airbnb": "^8.0.0",
