--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/leaflet-gpx": "^1.3.7",
+    "@vuepic/vue-datepicker": "^8.3.1",
     "@vueuse/core": "^10.9.0",
     "leaflet": "^1.9.4",
     "leaflet-gpx": "^1.7.0",
