--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/leaflet-gpx": "^1.3.7",
     "@vuepic/vue-datepicker": "^8.3.1",
     "@vueuse/core": "^10.9.0",
+    "firebase": "^10.9.0",
     "leaflet": "^1.9.4",
     "leaflet-gpx": "^1.7.0",
     "leaflet.fullscreen": "^3.0.1",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
