--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/leaflet-gpx": "^1.3.7",
+    "@types/uuid": "^9.0.8",
     "@vuepic/vue-datepicker": "^8.3.1",
     "@vueuse/core": "^10.9.0",
     "firebase": "^10.9.0",
@@ -24,6 +25,7 @@
     "leaflet.fullscreen": "^3.0.1",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
+    "uuid": "^9.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
