--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "uuid": "^9.0.1",
+    "vee-validate": "^4.5.8",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
