--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@types/uuid": "^9.0.8",
     "@vuepic/vue-datepicker": "^8.3.1",
     "@vueuse/core": "^10.9.0",
-    "firebase": "^10.9.0",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.6.0",
     "leaflet": "^1.9.4",
     "leaflet-gpx": "^1.7.0",
     "leaflet.fullscreen": "^3.0.1",
